--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
     </div>
 </div>
 
-<script src="js/Dato.js"></script>
-<script src="js/Ingreso.js"></script>
-<script src="js/Egreso.js"></script>
-<script src="js/app.js"></script>
+<script src="Dato.js"></script>
+<script src="Ingreso.js"></script>
+<script src="Egreso.js"></script>
+<script src="app.js"></script>
 
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
