--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <title>Presupuesto Disponible</title>
 </head>
 <body onload="cargarApp()">
@@ -11,18 +11,18 @@
 <header class="cabecero">
     <div class="presupuesto">
         <div class="presupuesto_titulo">Presupuesto Disponible</div>
-        <div class="presupuesto_valor" id="presupuesto">$0.00</div>
+        <div class="presupuesto_valor" id="presupuesto">+2,000.00</div>
         <div class="presupuesto_ingreso limpiarEstilos">
             <div class="presupuesto_ingreso--texto">Ingresos</div>
             <div class="derecha">
-                <div class="presupuesto_ingreso_valor" id="ingresos">$0.00</div>
+                <div class="presupuesto_ingreso_valor" id="ingresos">+ 0.00</div>
                 <div class="presupuesto_ingreso_porcentaje"></div>
             </div>
         </div>
         <div class="presupuesto_egreso limpiarEstilos">
             <div class="presupuesto_egreso--texto">Egresos</div>
             <div class="derecha limpiarEstilos">
-                <div class="presupuesto_egreso--valor" id="egresos">$0.00</div>
+                <div class="presupuesto_egreso--valor" id="egresos">- 0.00</div>
                 <div class="presupuesto_egreso--porcentaje" id="porcentaje">0%</div>
             </div>
         </div>
@@ -50,7 +50,7 @@
             <div class="elemento limpiarEstilos">
                 <div class="elemento_descripcion">Descripción</div>
                 <div class="derecha limpiarEstilos">
-                    <div class="elemento_valor">$0.00</div>
+                    <div class="elemento_valor">+ 0.00</div>
                     <div class="elemento_eliminar">
                         <button class="elemento_eliminar--btn"><ion-icon name="close-circle-outline"></ion-icon></button>
                     </div>
@@ -64,7 +64,7 @@
             <div class="elemento limpiarEstilos">
                 <div class="elemento_descripcion">Descripción</div>
                 <div class="derecha limpiarEstilos">
-                    <div class="elemento_valor">$0.00</div>
+                    <div class="elemento_valor">- 0.00</div>
                     <div class="elemento_porcentaje">0%</div>
                     <div class="elemento_eliminar">
                         <button class="elemento_eliminar--btn"><ion-icon name="close-circle-outline"></ion-icon></button>
@@ -75,10 +75,10 @@
     </div>
 </div>
 
-<script src="Dato.js"></script>
-<script src="Ingreso.js"></script>
-<script src="Egreso.js"></script>
-<script src="app.js"></script>
+<script src="js/Dato.js"></script>
+<script src="js/Ingreso.js"></script>
+<script src="js/Egreso.js"></script>
+<script src="js/app.js"></script>
 
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
